--- a/index.html
+++ b/index.html
@@ -8,51 +8,51 @@
 </head>
 <body>
     <main class="memory-game">
-        <div class="card">
+        <div class="card" data-card="bowser">
             <img src="./images/bowser.jpg" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="luigi">
             <img src="./images/luigi.png" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="mario">
             <img src="./images/mario.png" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="peach">
             <img src="./images/peach.png" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="toad">
             <img src="./images/toad.png" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="yoshi">
             <img src="./images/yoshi.png" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="bowser">
             <img src="./images/bowser.jpg" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="luigi">
             <img src="./images/luigi.png" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="mario">
             <img src="./images/mario.png" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="peach">
             <img src="./images/peach.png" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="toad">
             <img src="./images/toad.png" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="yoshi">
             <img src="./images/yoshi.png" alt="face da carta" class="card-front">
             <img src="./images/box.png" alt="verso da carta" class="card-back">
         </div>
